tests/paczka1/fuzzy1/10880465.err
Error in line 15: sredtb0mIB A966 72,4
Error in line 22: 4rt2y S764 13,5
Error in line 23: 4rt2y A450 31,1
Error in line 16: uBqHKj S498 56,1
